tests/test_proof/good/enums-arith.catala_en
## Test

```catala
declaration enumeration T:
   -- C content boolean
   -- D content integer

declaration enumeration S:
    -- A content integer
    -- B content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals B content (D content 1)
  definition x under condition match y with pattern -- A of a: a >= 0 -- B of b: false consequence equals 0
  definition x under condition match y with pattern -- A of a: a < 0 -- B of b: true consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[RESULT] No errors found during the proof mode run.
```
