tests/test_proof/bad/duration-overlap.catala_en
## Test

```catala
declaration scope A:
  context x content duration
  context y content boolean

scope A:
  definition x equals 94 day
  definition y under condition (x +^ x) >=^ 100 day consequence equals true
  definition y under condition (x +^ x) <=^ 100 day consequence equals false
```

```catala-test {id="Proof"}
catala Proof --disable_counterexamples 
```
